--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,39 @@
   width: 100vw;
   height: 100vh;
 }
-
+.body {
+  margin: 0px;
+  padding: 0px;
+}
 .Sidebar {
   height: 100vh;
   width: 300px;
-  background-color: blue;
+  background: linear-gradient(rgb(17, 17, 247), transparent);
+  background-color: rgb(100, 9, 245);
+}
+
+.SidebarList {
+  height: auto;
+  padding: 0px;
+  width: 100%;
+}
+
+.SidebarList .row {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  color: white;
+  justify-content: center;
+  align-items: center;
+}
+
+.row #icon {
+  flex: 30%;
+  display: grid;
+  place-items: center;
+}
+
+.row #title {
+  flex: 70%;
 }
